src/test/ui/associated-type-bounds/assoc-type-eq-with-dyn-atb-fail.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/assoc-type-eq-with-dyn-atb-fail.rs:32:18
   |
LL |     fn func() -> Self::Out {
   |                  ^^^^^^^^^ the trait `Copy` is not implemented for `String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
